--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '29.0.0'
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.asus.myfyp"
+        applicationId "com.asus.zenboproject"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
@@ -29,23 +28,9 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-database:19.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':RobotActivityLibrary')
-    implementation 'com.google.android.material:material:1.0.0'
-
-    //recyclerView
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.4.0'
-   // annotationProcessor 'com.github.bumptech.glide.compiler:4.4.0'
-
-    //circle imageView
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-
+    implementation project(path: ':ZenboSDK')
 }
-
-apply plugin: 'com.google.gms.google-services'
