--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.asus.myfyp">
+    package="com.asus.zenboproject">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,12 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <meta-data
-            android:name="myFYP"
-            android:value="15688E5096794A6EBBD04C82647ACA03"/>
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+        <meta-data android:name="zenbo_ds_domainuuid"
+            android:value="968FA483819A4BAEB76941D8CEF1A2BB"/>
+        <meta-data android:name="zenbo_ds_version_968FA483819A4BAEB76941D8CEF1A2BB"
+            android:value="0.0.1"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
